# Lexicon

./: README.md
src/: index.html  main.js  script.js  splashscreen.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
